@@ -31,6 +31,7 @@ Small features:
   * New function starpu_task_watchdog_set_hook to specify a function
     to be called when the watchdog is raised
   * Add STARPU_LIMIT_CPU_NUMA_MEM environment variable.
+  * Add STARPU_WORKERS_GETBIND environment variable.
 
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
